--- a/apps/docs/.vitepress/styles/custom.css
+++ b/apps/docs/.vitepress/styles/custom.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 :root {
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #FF90BB, #8ACCD5);
